--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   background-color: #fff;
   margin: 0px;
+  font-family: "CenturyGothic"
 }
 .site-content {
   padding: 0% 2.5%;
@@ -8,13 +9,87 @@ body {
 }
 .project {
   width: 100%;
-  min-height: 70vh;
+  height: 70vh;
 
+  display: -webkit-flex;
   display: flex;
   flex-flow: column wrap;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.project:hover .project-overlay {
+  opacity: 1;
 }
 
 .project-title {
   /*margin-top: -120px*/
-  width: 100%
+  width: 90%;
+  padding: 50px 5%;
+
+}
+.project-title h2 {
+  color: #fff;
+  text-decoration: none;
+  font-size: 3rem;
+  margin-bottom: 0px;
+}
+.project-title p {
+  color: #fff;
+  margin: 5px 0px 10px 0px;
+}
+.project-title button {
+  border: 2px solid #fff;
+  background: transparent;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+.project-overlay {
+  flex-grow: 1;
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: column wrap-reverse;
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.project-overlay a {
+  text-decoration: none;
+  flex-grow: 1;
+  height: inherit;
+  display: -webkit-flex;
+  display: flex;
+  /*flex-flow: column nowrap;*/
+  align-items: flex-end;
+}
+.project:nth-child(2n+0) {
+  width: 75%;
+  height: 50vh;
+  /*flex-basis: 75%;*/
+  /*flex: 1 0 auto;*/
+}
+.project:nth-child(3n+0) {
+  width: 25%;
+  height: 50vh;
+  /*margin-left: 75%; */
+}
+.project:nth-child(4n+0) {
+  width: 50%;
+  height: 50vh;
+  /*margin-left: 75%; */
+}
+.project:nth-child(5n+0) {
+  width: 50%;
+  height: 50vh;
+  /*margin-left: 75%; */
+}
+
+.project-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:  flex-start;
+  align-items: center;
+
 }
