--- a/css/header.css
+++ b/css/header.css
@@ -1,16 +1,40 @@
 .header {
   width: 95%;
   background-color: #fff;
-  padding: 25px 2.5%;
-  height: 45px;
+  padding: 20px 2.5%;
+  /*height: 45px;*/
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: space-between;
+  align-items: center;
 }
 .header-logo {
   color: #000;
   font-size: 45px;
   font-family: "blauwdruk"
+}
+.header-logo a {
+  color: #000;
+  text-decoration: none;
+}
+@media only screen and (max-width: 768px) {
+  .header-logo {
+    font-size: 40px;
+  }
+  .main-menu-toggle {
+    display: block
+  }
+  /*.main-menu {
+    display: none;
+  }*/
+}
+@media only screen and (max-width: 395px) {
+  .header-logo {
+    font-size: 30px;
+  }
+}
+.main-menu-toggle {
+  display: none;
 }
 .main-menu nav ul {
   list-style: none;
