--- a/css/header.css
+++ b/css/header.css
@@ -10,7 +10,9 @@
 .header-logo {
   color: #000;
   font-size: 45px;
-  font-family: "blauwdruk"
+  font-family: "blauwdruk";
+  text-decoration: none
+
 }
 .main-menu nav ul {
   list-style: none;
