--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,8 @@ body {
   width: 95%;
 }
 .project {
-  width: 100%;
-  height: 70vh;
-
-  display: -webkit-flex;
-  display: flex;
-  flex-flow: column wrap;
+  grid-column-start: 1;
+  grid-column-end: span 6;
 
   background-position: center;
   background-repeat: no-repeat;
@@ -47,10 +43,11 @@ body {
   cursor: pointer;
 }
 .project-overlay {
-  flex-grow: 1;
-  display: -webkit-flex;
-  display: flex;
-  flex-flow: column wrap-reverse;
+  /*flex-grow: 1;*/
+  /*display: -webkit-flex;*/
+  /*display: flex;*/
+  /*flex-flow: column wrap-reverse;*/
+  height: 100%;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -64,34 +61,49 @@ body {
   align-items: flex-end;
 }
 .project:nth-child(2n+0) {
-  width: 75%;
-  height: 50vh;
+  grid-row-start: 2;
+  grid-column-start: 1;
+  grid-column-end: 5;
   /*flex-basis: 75%;*/
   /*flex: 1 0 auto;*/
 }
 .project:nth-child(3n+0) {
-  width: 25%;
-  height: 50vh;
+  grid-row-start: 2;
+  grid-column-start: 5;
+  grid-column-end: span 6;
+  /*width: 25%;
+  height: 50vh;*/
   /*margin-left: 75%; */
 }
 .project:nth-child(4n+0) {
-  width: 50%;
-  height: 50vh;
+  grid-row-start: 3;
+  grid-column-start: 1;
+  grid-column-end: 4;
+
+  /*width: 50%;
+  height: 50vh;*/
   /*margin-left: 75%; */
 }
 .project:nth-child(5n+0) {
-  width: 50%;
-  height: 50vh;
+  grid-row-start: 3;
+  grid-column-start: 4;
+  grid-column-end: 7;
+  /*width: 50%;
+  height: 50vh;*/
   /*margin-left: 75%; */
 }
 
 .project-container {
-  display: flex;
+  /*display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content:  flex-start;
-  align-items: center;
+  align-items: center;*/
 
+  display: grid;
+  display: -ms-grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: 500px 250px;
 }
 
 
