--- a/less/main.less
+++ b/less/main.less
@@ -5,4 +5,5 @@
 
 @import 'sections/footer.less';
 
-@import 'page/contact-page.less'
+@import 'page/contact-page.less';
+@import 'page/single-project.less';
