--- a/less/base/form.less
+++ b/less/base/form.less
@@ -18,6 +18,13 @@
       input['placekolder'] {
         font-family: @primaryFont;
       }
+      textarea {
+        width: 50%;
+        border: 1px solid @primaryColor;
+        font-family: @primaryFont;
+        font-size: 1.2rem;
+        padding: 6px;
+      }
     }
   }
 }
